--- a/.eslintignore
+++ b/.eslintignore
@@ -6,6 +6,7 @@ tools/pdp-metadata
 scripts/__dropins__
 scripts/commerce-events-collector.js
 scripts/commerce-events-sdk.js
+scripts/htm.js
 plugins/
 cypress/
 dompurify.min.js
